# WEB_HW_10

./: pyproject.toml
quotes_site/quotes/: forms.py  models.py  urls.py  views.py
quotes_site/quotes/migrations/: 0001_initial.py  0002_alter_quote_tags.py
quotes_site/quotes/static/quotes/: style.css
quotes_site/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html  tag.html
quotes_site/quotes_site/: settings.py  urls.py
quotes_site/users/: urls.py  views.py
quotes_site/users/templates/users/: login.html  register.html
utils/: authors.json  config.ini  json2mongodb.py  mongo2postgres.py  scrapy_quotes.py
utils/db/: connect.py  models.py
